# tools-box

./: Makefile.am  build_configure.sh  configure.ac
SystemOverview/: .cproject  .project
SystemOverview/src/: SystemOverview.cpp
str_manipulations/: Makefile.am  string_manipulation.c  string_manipulation.h
utils/: Makefile.am  tool_regex.c  tool_regex.h
voip/: Makefile.am  conversion_number_e164.c
